# bici-central-system

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/espnow/: espnow_app.c
components/espnow/include/: espnow_app.h
components/events/: events_dispatch.c
components/events/include/: events_dispatch.h
components/leds/: leds.c  neopixel.c
components/leds/include/: leds.h  neopixel.h
components/leds/test/: test_leds.c
components/nvs/: nsv_second_dvce.c
components/nvs/include/: nsv_second_dvce.h
components/tasks/: tasks.c
components/tasks/include/: tasks.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h
